--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
     <header>
     </header>
     <body>
+        <div>
+        <img src="https://www.google.com/images/srpr/logo11w.png"</div>
     </body></html>
