il manque juste le header

--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
-<DOCTYPE!HTML>
+<!DOCTYPE HTML>
     
 <html>
     <head>
     <link href="style.css" rel="stylesheet" type="text/css"
-          <title>Google</title>
     </head>
     <header>
+<span class="header">
+    <a href="#">Gmail</a>
+    <a href="#">Images</a>
+    <a href="#"></a>
+    <a href="#">Connexion</a>
+  </span>
     </header>
     <body>
-        <div>
-        <img src="https://www.google.com/images/srpr/logo11w.png"</div>
-    </body></html>
+        <div class="main">
+<div class="logo">
+  <img class="google-logo"src="http://i.kinja-img.com/gawker-media/image/upload/s--pEKSmwzm--/c_scale,fl_progressive,q_80,w_800/1414228815325188681.jpg"
+       </div>
+
+<div class="searchform"><input style="search"></input>
+    <div>
+
+<div class="buttons"><button>Recherche Google</button><button>J'ai de la chance</button>
+  </div>
+  
+ <div class="footer">
+  
+  <span class="footer-gauche">
+    <a href="#">Publicité</a>
+    <a href="#">Entreprise</a>
+    <a href="#">A propos</a>
+  </span>
+  
+  <span class="footer-droit">
+  <a href="#">Confidentialité</a>
+    <a href="#">Conditions</a>
+    <a href="#">Paramètres</a>
+    <a href="#">Utiliser Google.com</a>
+  </span>
+  </div>
+  
+</div>
+  
+  
+
+    </body>
+        
+        </html>
