--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="main">
 <div class="logo">
-  <img class="google-logo"src="http://i.kinja-img.com/gawker-media/image/upload/s--pEKSmwzm--/c_scale,fl_progressive,q_80,w_800/1414228815325188681.jpg"
+  <img class="logo-google"src="http://i.kinja-img.com/gawker-media/image/upload/s--pEKSmwzm--/c_scale,fl_progressive,q_80,w_800/1414228815325188681.jpg"
        </div>
 
 <div class="searchform"><input style="search"></input>
